--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,5 +1,8 @@
 pipeline {
     agent any
+    environment {
+        scannerHome = tool 'sonar'
+    }
     tools {
         maven 'jenkinsmaven'
         jdk 'Java17'
@@ -25,6 +28,17 @@ pipeline {
 				echo 'Finalizado los tests '
             }
         }
+        stage('SonarScan'){
+            steps{
+            withSonarQubeEnv(installationName: 'Sonar'){
+            sh "${scannerHome}/bin/sonar-scanner \
+                mvn sonar:sonar \
+                -Dsonar.projectKey=PtoyectoFinal \                
+                -Dsonar.host.url=http://192.168.80.1:9000 \
+                -Dsonar.login=7519d0a385eef0af39282866a4f67747bf47c5fb"
+            }
+            }
+        }
         stage('Build and Run docker'){
             steps{
                 sh 'docker build -t proyectofinal .'
@@ -32,14 +46,6 @@ pipeline {
                 sh 'docker tag proyectofinal calegria27/proyectofinal:latest'
             }
         }
-        // stage('Sonarqube Analisis') {
-        //     steps {
-        //         sh ' mvn sonar:sonar \
-        //             -Dsonar.projectKey=PtoyectoFinal \
-        //             -Dsonar.host.url=http://sonarqube:9000 \
-        //             -Dsonar.login=7519d0a385eef0af39282866a4f67747bf47c5fb'
-        //     }
-        // }
         stage('Docker push'){
             steps{
                 echo 'Push a DockerHub'
