--- a/jenkinsfile
+++ b/jenkinsfile
@@ -30,10 +30,10 @@ pipeline {
         }
         stage('SonarScan'){
             steps{
-            withSonarQubeEnv(installationName: 'Sonar'){
+            withSonarQubeEnv(installationName: 'sonar'){
             sh "${scannerHome}/bin/sonar-scanner \
                 mvn sonar:sonar \
-                -Dsonar.projectKey=PtoyectoFinal \                
+                -Dsonar.projectKey=PtoyectoFinal \
                 -Dsonar.host.url=http://192.168.80.1:9000 \
                 -Dsonar.login=7519d0a385eef0af39282866a4f67747bf47c5fb"
             }
