--- a/jenkinsfile
+++ b/jenkinsfile
@@ -28,30 +28,34 @@ pipeline {
 				echo 'Finalizado los tests '
             }
         }
-        // stage('SonarScan'){
-        //     steps{
-        //     withSonarQubeEnv(installationName: 'sonar'){
-        //     sh "${scannerHome}/bin/sonar-scanner \
-        //         mvn sonar:sonar \
-        //         -Dsonar.projectKey=PtoyectoFinal \
-        //         -Dsonar.host.url=http://192.168.80.1:9000 \
-        //         -Dsonar.login=7519d0a385eef0af39282866a4f67747bf47c5fb"
-        //     }
+         stage('SonarScan'){
+             steps{
+             withSonarQubeEnv(installationName: 'sonar'){
+                sh"mvn sonar:sonar \
+                    -Dsonar.projectKey=PtoyectoFinal \
+                    -Dsonar.host.url=http://192.168.80.1:9000 \
+                    -Dsonar.login=8619ce39fb090717ceb43ef97abef5388d64e7a8"
+            //  sh "${scannerHome}/bin/sonar-scanner \
+            //      mvn sonar:sonar \
+            //      -Dsonar.projectKey=PtoyectoFinal \
+            //      -Dsonar.host.url=http://192.168.80.1:9000 \
+            //      -Dsonar.login=7519d0a385eef0af39282866a4f67747bf47c5fb"
+             }
+             }
+         }
+
+        // stage('Sonar Scanner') {
+        //     steps {
+        //         withSonarQubeEnv('sonar'){
+        //             script {
+        //                 def sonarqubeScannerHome = tool name: 'sonar', type: 'hudson.plugins.sonar.SonarRunnerInstallation'
+        //                 withCredentials([string(credentialsId: 'sonar', variable: 'sonarLogin')]) {
+        //                 sh "${sonarqubeScannerHome}/bin/sonar-scanner -e -Dsonar.host.url=http://SonarQube:9000 -Dsonar.login=${sonarLogin} -Dsonar.projectName=PtoyectoFinal -Dsonar.projectVersion=${env.BUILD_NUMBER} -Dsonar.projectKey=GS -Dsonar.sources=src/main/java/com/kibernumacademy/devops -Dsonar.tests=src/test/java/com/kibernumacademy/devops -Dsonar.language=java -Dsonar.java.binaries=."
+        //             }
+        //             }
+        //         }
         //     }
         // }
-
-        stage('Sonar Scanner') {
-            steps {
-                withSonarQubeEnv('sonar'){
-                    script {
-                        def sonarqubeScannerHome = tool name: 'sonar', type: 'hudson.plugins.sonar.SonarRunnerInstallation'
-                        withCredentials([string(credentialsId: 'sonar', variable: 'sonarLogin')]) {
-                        sh "${sonarqubeScannerHome}/bin/sonar-scanner -e -Dsonar.host.url=http://SonarQube:9000 -Dsonar.login=${sonarLogin} -Dsonar.projectName=PtoyectoFinal -Dsonar.projectVersion=${env.BUILD_NUMBER} -Dsonar.projectKey=GS -Dsonar.sources=src/main/java/com/kibernumacademy/devops -Dsonar.tests=src/test/java/com/kibernumacademy/devops -Dsonar.language=java -Dsonar.java.binaries=."
-                    }
-                    }
-                }
-            }
-        }
 
 
 
