--- a/jenkinsfile
+++ b/jenkinsfile
@@ -27,31 +27,18 @@ pipeline {
             	sh 'mvn test'
 				echo 'Finalizado los tests '
             }
-            steps{
-             withSonarQubeEnv(installationName: 'sonar'){
-                sh"mvn sonar:sonar \
-                    -Dsonar.projectKey=PtoyectoFinal \
-                    -Dsonar.host.url=http://192.168.80.1:9000 \
-                    -Dsonar.login=8619ce39fb090717ceb43ef97abef5388d64e7a8"
-             }
-             }
-            
         }
-        stage('SonarScan'){
+         stage('SonarScan'){
              steps{
              withSonarQubeEnv(installationName: 'sonar'){
-                sh"mvn sonar:sonar \
-                    -Dsonar.projectKey=PtoyectoFinal \
-                    -Dsonar.host.url=http://192.168.80.1:9000 \
-                    -Dsonar.login=8619ce39fb090717ceb43ef97abef5388d64e7a8"
-            //  sh "${scannerHome}/bin/sonar-scanner \
-            //      mvn sonar:sonar \
-            //      -Dsonar.projectKey=PtoyectoFinal \
-            //      -Dsonar.host.url=http://192.168.80.1:9000 \
-            //      -Dsonar.login=7519d0a385eef0af39282866a4f67747bf47c5fb"
+             sh "${scannerHome}/bin/sonar-scanner \
+                 mvn sonar:sonar \
+                 -Dsonar.projectKey=PtoyectoFinal \
+                 -Dsonar.host.url=http://192.168.80.1:9000 \
+                 -Dsonar.login=7519d0a385eef0af39282866a4f67747bf47c5fb"
              }
              }
-         }
+        }
 
         // stage('Sonar Scanner') {
         //     steps {
