--- a/jenkinsfile
+++ b/jenkinsfile
@@ -31,8 +31,8 @@ pipeline {
          stage('SonarScan'){
              steps{
              withSonarQubeEnv(installationName: 'sonar'){
-             sh "${scannerHome}/bin/sonar-scanner \
-                 mvn sonar:sonar \
+             sh "cd /var/jenkins_home/workspace/proyectoFinalDevOps"
+             sh "mvn sonar:sonar \
                  -Dsonar.projectKey=PtoyectoFinal \
                  -Dsonar.host.url=http://192.168.80.1:9000 \
                  -Dsonar.login=7519d0a385eef0af39282866a4f67747bf47c5fb"
