--- a/jenkinsfile
+++ b/jenkinsfile
@@ -4,7 +4,7 @@ pipeline {
         scannerHome = tool 'sonar'
     }
     tools {
-        // maven 'jenkinsmaven'
+        maven 'jenkinsmaven'
         jdk 'Java17'
     }
 
