--- a/jenkinsfile
+++ b/jenkinsfile
@@ -4,7 +4,7 @@ pipeline {
         scannerHome = tool 'sonar'
     }
     tools {
-        maven 'jenkinsmaven'
+        // maven 'jenkinsmaven'
         jdk 'Java17'
     }
 
@@ -31,13 +31,14 @@ pipeline {
          stage('SonarScan'){
              steps{
              withSonarQubeEnv(installationName: 'sonar'){
-             sh "${scannerHome}/bin/sonar-scanner \
-                 mvn sonar:sonar \
-                 -Dsonar.projectKey=PtoyectoFinal \
-                 -Dsonar.host.url=http://192.168.80.1:9000 \
-                 -Dsonar.login=7519d0a385eef0af39282866a4f67747bf47c5fb"
-             }
-             }
+                sh 'cd var/jenkins_home/workspace/proyectoFinalDevOps'
+                sh "${scannerHome}/bin/sonar-scanner \
+                    mvn sonar:sonar \
+                    -Dsonar.projectKey=PtoyectoFinal \
+                    -Dsonar.host.url=http://192.168.80.1:9000 \
+                    -Dsonar.login=7519d0a385eef0af39282866a4f67747bf47c5fb"
+            }
+            }
         }
 
         // stage('Sonar Scanner') {
