--- a/jenkinsfile
+++ b/jenkinsfile
@@ -40,13 +40,19 @@ pipeline {
              }
          }
 
-          stage('Sonarqube quality gate') {
-              steps {
-                timeout(time: 10, unit: 'MINUTES') {
-                    waitForQualityGate abortPipeline: true
+            stage("Quality Gate") {
+                steps {
+                    timeout(time: 15, unit: 'MINUTES') { 
+                        waitForQualityGate abortPipeline: true
+                        script{
+                            def qg = waitForQualityGate() 
+                            if(qg.status != 'OK'){ 
+                                error "Pipeline aborted due to quality gate failure: ${qg.status}"
+                            }
+                        }
+                    }
                 }
             }
-         }
 
 
 
