--- a/jenkinsfile
+++ b/jenkinsfile
@@ -33,9 +33,9 @@ pipeline {
               withSonarQubeEnv(installationName: 'sonar'){
                  sh 'cd /var/jenkins_home/workspace/proyectoFinalDevOps'
                  sh "mvn sonar:sonar \
-                     -Dsonar.projectKey=PtoyectoFinal \
-                     -Dsonar.host.url=http://192.168.80.1:9000 \
-                     -Dsonar.login=7519d0a385eef0af39282866a4f67747bf47c5fb"
+                    -Dsonar.projectKey=PtoyectoFinal \
+                    -Dsonar.host.url=http:192.168.80.1:9000 \
+                    -Dsonar.login=82f78a23db596b2e521d9a865188d0c0d0cf9030"
              }
              }
          }
