--- a/jenkinsfile
+++ b/jenkinsfile
@@ -43,11 +43,20 @@ pipeline {
             stage("Quality Gate") {
                 steps {
                     timeout(time: 15, unit: 'MINUTES') { 
-                        sh 'cd /'
                         waitForQualityGate abortPipeline: true
+                        script{
+                            def qg = waitForQualityGate() 
+                            if(qg.status != 'OK'){ 
+                                error "Pipeline aborted due to quality gate failure: ${qg.status}"
+                            }
+                        }
                     }
                 }
             }
+
+
+
+
 
         stage('Build and Run docker'){
             steps{
