--- a/jenkinsfile
+++ b/jenkinsfile
@@ -28,18 +28,29 @@ pipeline {
 				echo 'Finalizado los tests '
             }
         }
-          stage('SonarScan'){
-              steps{
-              withSonarQubeEnv(installationName: 'sonar'){
-                 sh 'cd /var/jenkins_home/workspace/proyectoFinalDevOps'
-                 sh "mvn sonar:sonar \
-                    -Dsonar.projectKey=devopsfinal \
-                    -Dsonar.host.url=http:192.168.80.1:9000 \
-                    -Dsonar.login=9bb021358ca659968331734656df04bf01e4dce7"
-             }
-             }
-         }
-
+        //   stage('SonarScan'){
+        //       steps{
+        //       withSonarQubeEnv(installationName: 'sonar'){
+        //          sh 'cd /var/jenkins_home/workspace/proyectoFinalDevOps'
+        //          sh "mvn sonar:sonar \
+        //             -Dsonar.projectKey=devopsfinal \
+        //             -Dsonar.host.url=http:192.168.80.1:9000 \
+        //             -Dsonar.login=9bb021358ca659968331734656df04bf01e4dce7"
+        //      }
+        //      }
+        //  }
+            stage("Sonar Scanner") {
+                steps {
+                    withSonarQubeEnv("sonar"){
+                        script {
+                            def sonarqubeScannerHome = tool name: 'sonar', type: 'hudson.plugins.sonar.SonarRunnerInstallation'
+                            withCredentials([string(credentialsId:'sonar', variable: 'sonarLogin')]) {
+                            sh "${sonarqubeScannerHome}/bin/sonar-scanner -e -Dsonar.host.url=http://192.168.80.1:9000 -Dsonar.login=${sonarLogin} -Dsonar.projectName=devops -Dsonar.projectVersion=${env.BUILD_NUMBER} -Dsonar.projectKey=GS -Dsonar.sources=src/main/java/com/kibernumacademy/devops -Dsonar.tests=src/test/java/com/kibernumacademy/devops -Dsonar.language=java -Dsonar.java.binaries=."
+                        }
+                        }
+                    }
+                }
+            }          
             stage("Quality Gate") {
                 steps {
                     timeout(time: 15, unit: 'MINUTES') { 
