--- a/jenkinsfile
+++ b/jenkinsfile
@@ -45,7 +45,7 @@ pipeline {
                         script {
                             def sonarqubeScannerHome = tool name: 'sonar', type: 'hudson.plugins.sonar.SonarRunnerInstallation'
                             withCredentials([string(credentialsId:'sonar', variable: 'sonarLogin')]) {
-                            sh "${sonarqubeScannerHome}/bin/sonar-scanner -e -Dsonar.host.url=http://192.168.80.1:9000 -Dsonar.login=${sonarLogin} -Dsonar.projectName=devops -Dsonar.projectVersion=${env.BUILD_NUMBER} -Dsonar.projectKey=GS -Dsonar.sources=src/main/java/com/kibernumacademy/devops -Dsonar.tests=src/test/java/com/kibernumacademy/devops -Dsonar.language=java -Dsonar.java.binaries=."
+                            sh "${sonarqubeScannerHome}/bin/sonar-scanner -e -Dsonar.host.url=http://192.168.80.1:9000 -Dsonar.login=${sonarLogin} -Dsonar.projectName=devops -Dsonar.projectVersion=${env.BUILD_NUMBER} -Dsonar.projectKey=devopsfinal -Dsonar.sources=src/main/java/com/kibernumacademy/devops -Dsonar.tests=src/test/java/com/kibernumacademy/devops -Dsonar.language=java -Dsonar.java.binaries=."
                         }
                         }
                     }
