--- a/jenkinsfile
+++ b/jenkinsfile
@@ -5,7 +5,6 @@ pipeline {
     }
     tools {
         maven 'jenkinsmaven'
-        // jdk 'Java17'
     }
 
     stages {
@@ -18,7 +17,7 @@ pipeline {
         stage('Build') {
             steps {
                 echo 'Construyendo la aplicacion'
-                sh 'mvn clean package'
+                sh 'mvn clean package',
             }
         }
         stage('Test') {
@@ -28,47 +27,31 @@ pipeline {
 				echo 'Finalizado los tests '
             }
         }
-        //   stage('SonarScan'){
-        //       steps{
-        //       withSonarQubeEnv(installationName: 'sonar'){
-        //          sh 'cd /var/jenkins_home/workspace/proyectoFinalDevOps'
-        //          sh "mvn sonar:sonar \
-        //             -Dsonar.projectKey=devopsfinal \
-        //             -Dsonar.host.url=http:192.168.80.1:9000 \
-        //             -Dsonar.login=9bb021358ca659968331734656df04bf01e4dce7"
-        //      }
-        //      }
-        //  }
-            stage("Sonar Scanner") {
-                steps {
-                    withSonarQubeEnv("sonar"){
-                        script {
-                            def sonarqubeScannerHome = tool name: 'sonar', type: 'hudson.plugins.sonar.SonarRunnerInstallation'
-                            withCredentials([string(credentialsId:'sonar', variable: 'sonarLogin')]) {
-                            sh "${sonarqubeScannerHome}/bin/sonar-scanner -e -Dsonar.host.url=http://192.168.80.1:9000 -Dsonar.login=${sonarLogin} -Dsonar.projectName=devops -Dsonar.projectVersion=${env.BUILD_NUMBER} -Dsonar.projectKey=devopsfinal -Dsonar.sources=src/main/java/com/kibernumacademy/devops -Dsonar.tests=src/test/java/com/kibernumacademy/devops -Dsonar.language=java -Dsonar.java.binaries=."
-                        }
-                        }
+        stage("Sonar Scanner") {
+            steps {
+                withSonarQubeEnv("sonar"){
+                    script {
+                        def sonarqubeScannerHome = tool name: 'sonar', type: 'hudson.plugins.sonar.SonarRunnerInstallation'
+                        withCredentials([string(credentialsId:'sonar', variable: 'sonarLogin')]) {
+                        sh "${sonarqubeScannerHome}/bin/sonar-scanner -e -Dsonar.host.url=http://192.168.80.1:9000 -Dsonar.login=${sonarLogin} -Dsonar.projectName=devops -Dsonar.projectVersion=${env.BUILD_NUMBER} -Dsonar.projectKey=devopsfinal -Dsonar.sources=src/main/java/com/kibernumacademy/devops -Dsonar.tests=src/test/java/com/kibernumacademy/devops -Dsonar.language=java -Dsonar.java.binaries=."
+                    }
                     }
                 }
-            }          
-            stage("Quality Gate") {
-                steps {
-                    timeout(time: 15, unit: 'MINUTES') { 
-                        waitForQualityGate abortPipeline: true
-                        script{
-                            def qg = waitForQualityGate() 
-                            if(qg.status != 'OK'){ 
-                                error "Pipeline aborted due to quality gate failure: ${qg.status}"
-                            }
+            }
+        }          
+        stage("Quality Gate") {
+            steps {
+                timeout(time: 15, unit: 'MINUTES') { 
+                    waitForQualityGate abortPipeline: true
+                    script{
+                        def qg = waitForQualityGate() 
+                        if(qg.status != 'OK'){ 
+                            error "Pipeline aborted due to quality gate failure: ${qg.status}"
                         }
                     }
                 }
             }
-
-
-
-
-
+        }
         stage('Build and Run docker'){
             steps{
                 sh 'docker build -t proyectofinal .'
