--- a/jenkinsfile
+++ b/jenkinsfile
@@ -17,7 +17,7 @@ pipeline {
         stage('Build') {
             steps {
                 echo 'Construyendo la aplicacion'
-                sh 'mvn clean package',
+                sh 'mvn clean package'
             }
         }
         stage('Test') {
